--- a/1_linearRegression/linearRegression.ipynb
+++ b/1_linearRegression/linearRegression.ipynb
@@ -224,7 +224,7 @@
     "\n",
     "**Error** $e = (h_{\\beta}(X) - y)$\n",
     "\n",
-    "**Cost Function** $J = \\frac{\\sum(h_{\\beta} - y)^{2}}{2N}$\n",
+    "**Cost Function** $J = \\frac{1}{2n}{\\sum(h_{\\beta} - y)^2}$\n",
     "\n",
     "**Gradient** $g = X^{T}\\cdot e$\n"
    ]
@@ -245,7 +245,7 @@
     "    sampleSize, numVariables = X.shape\n",
     "#     hypothesis vector h(n, 1)\n",
     "    h = hypothesis(beta, X)\n",
-    "#     cost scalar J(1, 1) = (y-h).T, y-h)/(2*n), where n is sampleSize\n",
+    "#     cost scalar J(1, 1)\n",
     "    J = np.sum((y-h)**2)/(2*sampleSize)\n",
     "#     similarly cost J can be calculated using dot-product\n",
     "#     J(1, 1) = (y-h).T, y-h)/(2*n), where n is sampleSize\n",
