--- a/3_neuralNetworks_I/neuralNetworks_I.ipynb
+++ b/3_neuralNetworks_I/neuralNetworks_I.ipynb
@@ -188,8 +188,7 @@
     "#     regularisation term vector (r(400x1)) — derivative of the regularisation term of the cost funtion\n",
     "    r = beta[1:, None]*(iLambda/sampleSize)\n",
     "    g[1:] = g[1:] + r\n",
-    "    return g.flatten()\n",
-    "    "
+    "    return g.flatten()"
    ]
   },
   {
