--- a/3_neuralNetworks_I/neuralNetworks_I.ipynb
+++ b/3_neuralNetworks_I/neuralNetworks_I.ipynb
@@ -69,7 +69,7 @@
    "source": [
     "np.random.seed(0)\n",
     "def digitDatum(x):\n",
-    "    '''converts vector x into a matrix, 20x20'''\n",
+    "    '''converts vector x (1,400) into a matrix(32,32)'''\n",
     "#     by default order='C', but in this case the lines are assembled in wrong order\n",
     "    return np.reshape(x, (-1, 20), order='F')\n",
     "\n",
