Test markdown equations

--- a/1_linearRegression/linearRegression.ipynb
+++ b/1_linearRegression/linearRegression.ipynb
@@ -182,40 +182,41 @@
     "#### Vector Representation of the Regression Problem\n",
     "Variables matrix X:\n",
     "$$\n",
-    "X = \\Big\\begin{vmatrix}\n",
+    "X = \\begin{vmatrix}\n",
     "x_{1,1} & \\ldots & x_{1,j} \\\\\n",
     "\\ldots & \\ldots & \\ldots \\\\\n",
     "x_{n,1} & \\ldots & x_{n,j}\\\\\n",
-    "\\Big\\end{vmatrix}$$\n",
+    "\\end{vmatrix}\n",
+    "$$\n",
     "\n",
     "Variables marix X, after adding a column of ones as intercepts:\n",
     "$$\n",
-    "X =\n",
-    "\\begin{vmatrix}\n",
+    "X = \\begin{vmatrix}\n",
     "1 & x_{1,1} & \\ldots & x_{1,k} \\\\\n",
     "1 & \\ldots & \\ldots & \\ldots \\\\\n",
     "1 & x_{n,1}& \\ldots & x_{n,k}\\\\\n",
-    "\\end{vmatrix}$$\n",
+    "\\end{vmatrix}\n",
+    "$$\n",
     "\n",
     "Response vector Y:\n",
-    "\\begin{equation}\n",
+    "$$\n",
     "Y =\n",
     "\\begin{vmatrix}\n",
     "y_1\\\\\n",
     "\\ldots\\\\\n",
     "y_n\\\\\n",
     "\\end{vmatrix}\n",
-    "\\end{equation}\n",
+    "$$\n",
     "\n",
     "Coefficients vector $\\beta$:\n",
-    "\\begin{equation}\n",
+    "$$\n",
     "\\beta =\n",
     "\\begin{vmatrix}\n",
     "\\beta_1\\\\\n",
     "\\ldots\\\\\n",
     "\\beta_k\\\\\n",
     "\\end{vmatrix}\n",
-    "\\end{equation}\n",
+    "$$\n",
     "\n",
     "**Hypothesis** $h_{\\beta}(X) =  X\\cdot\\beta$\n",
     "\n",
