--- a/1_linearRegression/linearRegression.ipynb
+++ b/1_linearRegression/linearRegression.ipynb
@@ -191,31 +191,31 @@
     "\n",
     "Variables marix X, after adding a column of ones as intercepts:\n",
     "$$\n",
-    "X = \\begin{vmatrix}\n",
+    "X = \\begin{bmatrix}\n",
     "1 & x_{1,1} & \\ldots & x_{1,k} \\\\\n",
     "1 & \\ldots & \\ldots & \\ldots \\\\\n",
     "1 & x_{n,1}& \\ldots & x_{n,k}\\\\\n",
-    "\\end{vmatrix}\n",
+    "\\end{bmatrix}\n",
     "$$\n",
     "\n",
     "Response vector Y:\n",
     "$$\n",
     "Y =\n",
-    "\\begin{vmatrix}\n",
+    "\\begin{bmatrix}\n",
     "y_1\\\\\n",
     "\\ldots\\\\\n",
     "y_n\\\\\n",
-    "\\end{vmatrix}\n",
+    "\\end{bmatrix}\n",
     "$$\n",
     "\n",
     "Coefficients vector $\\beta$:\n",
     "$$\n",
     "\\beta =\n",
-    "\\begin{vmatrix}\n",
+    "\\begin{bmatrix}\n",
     "\\beta_1\\\\\n",
     "\\ldots\\\\\n",
     "\\beta_k\\\\\n",
-    "\\end{vmatrix}\n",
+    "\\end{bmatrix}\n",
     "$$\n",
     "\n",
     "**Hypothesis** $h_{\\beta}(X) =  X\\cdot\\beta$\n",
