Revise backward propagation

--- a/jupyterMarkdown.ipynb
+++ b/jupyterMarkdown.ipynb
@@ -14,8 +14,9 @@
     "## Text Fomating\n",
     "**bold** <br>\n",
     "*italics*<br>\n",
+    "$word^{upper script}$<br>\n",
     "$word_{lower script}$<br>\n",
-    "$word_{upper script}$<br>\n",
+    "\n",
     "\n",
     "## Horisontal Separators\n",
     "***\n",
@@ -41,7 +42,12 @@
     "\n",
     "## Images\n",
     "<img src=\"neuralNetwork.png\">\n",
-    "<img src=\"testImage.png\"/>"
+    "<img src=\"testImage.png\"/>\n",
+    "\n",
+    "## Tables\n",
+    "|  A  |  B  |  C  |\n",
+    "|:--- |:---:| ---:|\n",
+    "|  a  |  b  |  c  |"
    ]
   },
   {
