--- a/4_neuralNetworks_II/neuralNetworks_II.ipynb
+++ b/4_neuralNetworks_II/neuralNetworks_II.ipynb
@@ -61,14 +61,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 1 Nural Network"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<img src=\"neuralNetwork.png\">"
+    "# 1 Nural Network\n",
+    "## 1.1 Forward Porpagation\n",
+    "<img src=\"forwardPropagation.png\">"
    ]
   },
   {
@@ -84,14 +79,6 @@
     "    X = data['X']\n",
     "    y = data['y']\n",
     "    return X, y\n",
-    "\n",
-    "# def flattenX(X):\n",
-    "#     flatX = X.flatten()\n",
-    "#     return flatX\n",
-    "\n",
-    "# def reshapeX(flatX, sampleSize):\n",
-    "#     reshapedX = flatX.reshape(sampleSize,-1)\n",
-    "#     return reshapedX\n",
     "\n",
     "def generateBeta(layer):\n",
     "    '''Generate beta-matrix for every layer in Neural Network'''\n",
@@ -109,13 +96,13 @@
     "        flatBeta = np.concatenate((flatBeta, beta.flatten()), axis=-1)\n",
     "    return flatBeta\n",
     "\n",
-    "def reshapeBeta(flatBeta, layer):\n",
+    "def reshapeBeta(Beta, layer):\n",
     "    splitIndex = 0\n",
     "    splitIndices = []\n",
     "    for i in range(len(layer)-2):\n",
     "        splitIndex += (layer[i]+1)*layer[i+1]\n",
     "        splitIndices += [splitIndex]\n",
-    "    splitBeta = np.split(flatBeta, splitIndices)\n",
+    "    splitBeta = np.split(Beta, splitIndices)\n",
     "    reshapedBeta = ()\n",
     "    for i in range(len(splitBeta)):\n",
     "        reshapedBeta += (splitBeta[i].reshape(layer[i+1],layer[i]+1),)\n",
@@ -127,41 +114,26 @@
     "def forwardPropagation(flatBeta, layer, flatX, sampleSize):\n",
     "    '''Forward Propagation is the hypothesis function for Neural Networks'''\n",
     "    betaSet = reshapeBeta(flatBeta, layer)\n",
-    "#     Y_0 (5000, 400)\n",
-    "    Y = flatX.reshape(sampleSize, -1)\n",
-    "#     Z_Y = ()\n",
-    "    Y_byLayer = ()\n",
+    "#     H_0 (5000, 400)\n",
+    "    H = flatX.reshape(sampleSize, -1)\n",
+    "#     Z_H = ()\n",
+    "    H_byLayer = ()\n",
     "    for beta in betaSet:\n",
+    "#         print(H.shape)\n",
     "#         Z_l (5000, k_l); l is the number of layers [0, ...,l]; k is the number of neurons in a layer l [1,...,k]\n",
-    "        Z = np.dot(np.insert(Y, 0, 1, axis=1), beta.T)\n",
-    "#         Y_l (5000, k_l); l is the number of layers [0, ...,l]; k is the number of neurons in a layer l [1,...,k]\n",
-    "        Y = sigmoid(Z)\n",
-    "#         Z_Y += ((Z, Y),)\n",
-    "        Y_byLayer += (Y,)\n",
-    "#     Y_2 (5000, 10)\n",
-    "    return Y_byLayer\n",
+    "        Z = np.dot(np.insert(H, 0, 1, axis=1), beta.T)\n",
+    "#         H_l (5000, k_l); l is the number of layers [0, ...,l]; k is the number of neurons in a layer l [1,...,k]\n",
+    "        H = sigmoid(Z)\n",
+    "#         Z_H += ((Z, H),)\n",
+    "        H_byLayer += (H,)\n",
+    "#     H_2 (5000, 10)\n",
+    "    return H_byLayer\n",
     "\n",
     "def sigmoidGradient(Z):\n",
     "    return sigmoid(Z)*(1-sigmoid(Z))\n",
     "\n",
-    "\"\"\"this function has to be revised;\n",
-    "there should be a way to get cost function using matrix operations without for-loop\"\"\"\n",
-    "# def costFunction(beta, X, y, iLambda = 0.):\n",
-    "#     sampleSize, numVariables = X.shape  # X(5000, 401)\n",
-    "#     Y = np.array([np.unique(y)]* y.shape[0]) == y\n",
-    "# #     hypothesis matrix H(5000, 10)\n",
-    "#     H = forwardPropagation(betaSet, X)\n",
-    "# #     cost function matrix J (5000, 5000) = Y.T(5000, 10)*H(10, 5000)\n",
-    "#     J = (- np.dot(Y, np.log(H).T) - np.dot((1-Y), np.log(1-H).T))/sampleSize\n",
-    "# #     regularisation term (R)\n",
-    "#     cummulativeR = 0\n",
-    "#     for beta in betaSet:\n",
-    "#         cummulativeR += np.sum(beta*beta) # element-wise multiplication\n",
-    "#     cummulativeR *= iLambda/(2*sampleSize)\n",
-    "#     return J/sampleSize + cummulativeR\n",
-    "\n",
     "def costFunction(flatBeta, layer, flatX, sampleSize, y, yUnique, iLambda = 0.):\n",
-    "    sampleSize, numVariables = X.shape  # X(1, 401)\n",
+    "    X = flatX.reshape(sampleSize, -1)\n",
     "    Y = np.array([yUnique]* y.shape[0]) == y\n",
     "    betaSet = reshapeBeta(flatBeta, layer)\n",
     "    J = 0\n",
@@ -178,27 +150,23 @@
     "    for beta in betaSet:\n",
     "        cummulativeR += np.sum(beta*beta) #element-wise multiplication\n",
     "    cummulativeR *= iLambda/(2*sampleSize)\n",
-    "    return J[0][0]/sampleSize + cummulativeR\n",
-    "\n",
-    "# def gradient(beta, X, y, iLambda=0.):\n",
-    "#     sampleSize, numVariables = X.shape\n",
-    "# #     hypothesis (h)\n",
-    "#     h = hypothesis(beta, X)\n",
-    "# #     error vector e(5000x1) = h(5000x1) - y(5000x1)\n",
-    "#     e = h - y\n",
-    "# #     gradient vector g(401x1) = e.T(1x5000)*X(401x5000)\n",
-    "#     g = np.dot(X.T,e)/(sampleSize)\n",
-    "# #     regularisation term vector (r(400x1)) — derivative of the regularisation term of the cost funtion\n",
-    "#     r = beta[1:, None]*(iLambda/sampleSize)\n",
-    "#     g[1:] = g[1:] + r\n",
-    "#     return g.flatten()"
+    "    return J[0][0]/sampleSize + cummulativeR"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1.1 Neural Network Initialisation"
+    "### 1.1.1 Neural Network Initialisation\n",
+    "\n",
+    "The input-data matrix X(5000, 400) is comprised of 5000 digit images 20 by 20 pixels (400 pixels).<br>\n",
+    "The output-data vector Y(5000,1) is comprised of 5000 assigned digits (1 through 10; 10 represents figure '0').<br>\n",
+    "The neural network in this work has 1 input layer (400 neurons), one hidden layer (25 neurons) and an output layer (10 neurons).\n",
+    "To initialise a simple neural network, one has to do the following:\n",
+    "1. set the number of neurons in every layer (including input and output layers)\n",
+    "2. extract and flatten input matrix X\n",
+    "3. transform output Y\n",
+    "3. initialise Beat matrix"
    ]
   },
   {
@@ -220,11 +188,14 @@
     }
    ],
    "source": [
+    "# Set number of neurons in every layer (including input and output layers)\n",
     "layer = 400, 25, 10\n",
+    "# Extract and flatten input matrix X\n",
     "X, y = getData(pathToDataFile)\n",
     "sampleSize, numVariables = X.shape\n",
     "flatX = X.flatten()\n",
     "yUnique = np.unique(y)\n",
+    "# Initialise Beat matrix\n",
     "betaTest = flattenBeta((weights['Theta1'], weights['Theta2']))\n",
     "betaInitial = flattenBeta(generateBeta(layer))\n",
     "print(X.shape)\n",
@@ -236,7 +207,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1.2 Forward-Propagation Test"
+    "## 1.1.2 Forward-Propagation Test"
    ]
   },
   {
@@ -245,18 +216,11 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(1, 10)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "Y = np.array([yUnique]* y.shape[0]) == y\n",
-    "print(Y[0:0+1,:].shape)"
+    "# either transformed Y or y together with yUnique can be suplied to a function\n",
+    "# Y = np.array([yUnique]* y.shape[0]) == y\n",
+    "# print(Y[0:0+1,:].shape)"
    ]
   },
   {
@@ -310,24 +274,24 @@
     "print(X.shape)\n",
     "print(X[0][None,:].shape)\n",
     "# costFunction(betaTest, layer, X.flatten(), sampleSize, y, yUnique, iLambda = 0.)\n",
-    "costFunction(betaTest, layer, X[0:100][None,:].flatten(), sampleSize, y, yUnique, iLambda = 0.)"
+    "costFunction(betaTest, layer, X[0:5000][None,:].flatten(), 5000, y, yUnique, iLambda = 0.)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1.2 Cost-Function Test\n",
+    "## 1.1.3 Cost-Function Test\n",
     "The outputs of the costFunction should be as follows:<br\\>\n",
-    "betaTest, X, iLambda=0. — 0.287629165161<br\\>\n",
-    "betaTest, X, iLambda=1. — 0.384487796243<br\\>\n",
-    "betaTest, X, iLambda=0. — 0.287629165161 — weird result<br\\>\n",
+    "betaTest, X, iLambda=0. — 0.287629 (Andrew Ng)<br\\>\n",
+    "betaTest, X, iLambda=1. — 0.383770 (Andrew Ng)<br\\>\n",
+    "betaTest, X, iLambda=0. — 0.0345203898838<br\\>\n",
     "betaInitial, X, iLambda=1. — 65.5961451562"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -338,79 +302,36 @@
      "text": [
       "0.287629165161\n",
       "0.384487796243\n",
-      "0.287629165161\n",
-      "59.6276430654\n"
+      "0.0345203898838\n",
+      "65.5961451562\n"
      ]
     }
    ],
    "source": [
     "print(costFunction(betaTest, layer, flatX, sampleSize, y, yUnique, iLambda = 0.))\n",
     "print(costFunction(betaTest, layer, flatX, sampleSize, y, yUnique, iLambda = 1.))\n",
-    "print(costFunction(betaTest, layer, X[0][None,:].flatten(), sampleSize, y, yUnique, iLambda = 0.))\n",
+    "print(costFunction(betaTest, layer, X[0][None,:].flatten(), 1, y, yUnique, iLambda = 0.))\n",
     "print(costFunction(betaInitial, layer, flatX, sampleSize, y, yUnique, iLambda = 1.))"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "operands could not be broadcast together with shapes (1,9) (1,25) ",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-12-54174ddffbe9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     26\u001b[0m \u001b[0;31m#         print(l)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     27\u001b[0m \u001b[0;31m#         print(h_n[l].shape)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 28\u001b[0;31m         \u001b[0me_n\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0me_n\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0msigmoidGradient\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mh_n\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0ml\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbetaInitial\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0ml\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     29\u001b[0m         \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mh_n\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0ml\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mT\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minsert\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0me_n\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: operands could not be broadcast together with shapes (1,9) (1,25) "
-     ]
-    }
-   ],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "sampleSize, numVariables = X.shape\n",
-    "Y = np.array([yUnique]* y.shape[0]) == y\n",
-    "# print (Y.shape)\n",
-    "\n",
-    "nLayer = len(layer)-1\n",
-    "deltaSet = ()\n",
-    "inLayer = X.shape[1]\n",
-    "for i in range(len(layer)-1):\n",
-    "    deltaSet += (np.zeros((layer[i+1], layer[i]+1)),)\n",
-    "# print (deltaSet[1].shape)\n",
-    "\n",
-    "for n in range(sampleSize):#range(sampleSize)\n",
-    "#         x_n(1, 400)\n",
-    "    x_n = X[n:n+1,:]\n",
-    "#     print(x_n.shape)\n",
-    "#         y_n(1, 10)\n",
-    "    y_n = Y[n:n+1,:]\n",
-    "#     print(y_n.shape)\n",
-    "#         h_n(1, 10)\n",
-    "    h_n = forwardPropagation(betaInitial, layer, x_n, 1)\n",
-    "#     print(h_n.shape)\n",
-    "#         error e_n(1, 10) for a given sample (x_n, y_n)\n",
-    "    e_n = h_n[nLayer-1] - y_n\n",
-    "#     print(e_n.shape)\n",
-    "    for l in reversed(range(nLayer)):\n",
-    "#         print(l)\n",
-    "#         print(h_n[l].shape)\n",
-    "        e_n = np.dot(e_n*sigmoidGradient(h_n[l]), betaInitial[l])[:,1:]\n",
-    "        np.dot(h_n[l].T, np.insert(e_n, 0, 1, axis=1))"
+    "## 1.2 Back Propagation\n",
+    "$\\delta^l = H^l - Y$<br>\n",
+    "$\\delta^{l-1} = (\\beta^{l-1})^T\\delta^l\\cdot g'(h^{l-1})$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "def backPropagation(flatBeta, layer, flatX, sampleSize, y, yUnique):\n",
-    "    sampleSize, numVariables = X.shape\n",
     "    Y = np.array([yUnique]* y.shape[0]) == y\n",
     "    betaSet = reshapeBeta(flatBeta, layer)\n",
     "\n",
@@ -428,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false
    },
@@ -437,22 +358,80 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "14421.6429741\n",
-      "170.671193875\n"
+      "(5000, 25)\n",
+      "(5000, 400)\n",
+      "2\n",
+      "(25, 401)\n",
+      "(10, 26)\n",
+      "(10285,)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.14300247142022265"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Y = np.array([yUnique]* y.shape[0]) == y\n",
+    "# print(Y.shape)\n",
+    "betaSet = reshapeBeta(betaTest, layer)\n",
+    "# print(len(betaSet))\n",
+    "deltaSet = ()\n",
+    "#     hypothesis matrix E(5000, 10)\n",
+    "H = forwardPropagation(betaTest, layer, flatX, sampleSize)\n",
+    "# print (len(H))\n",
+    "#     error matrix E(5000, 10)\n",
+    "E = H[len(layer)-2] - Y\n",
+    "# print(E.shape)\n",
+    "for l in reversed(range(len(layer)-1)):\n",
+    "    E = np.dot(E*sigmoidGradient(H[l]), betaSet[l])[:,1:]\n",
+    "    print(E.shape)\n",
+    "    deltaSet = (np.dot(H[l].T, np.insert(E, 0, 1, axis=1)),) + deltaSet\n",
+    "print(len(deltaSet))\n",
+    "print(deltaSet[0].shape)\n",
+    "print(deltaSet[1].shape)\n",
+    "flatDelta = flattenBeta(deltaSet)\n",
+    "print(betaTest.shape)\n",
+    "f = betaTest + flatDelta/sampleSize\n",
+    "f[3915]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(10285,)\n",
+      "0.14300247142\n",
+      "-77.6897929714\n",
+      "0.328301599213\n"
      ]
     }
    ],
    "source": [
     "betaInitial = flattenBeta(generateBeta(layer))\n",
-    "a = backPropagation(betaInitial, layer, flatX, sampleSize, y, yUnique)\n",
-    "\n",
+    "a = backPropagation(betaTest, layer, flatX, sampleSize, y, yUnique)\n",
+    "print(a.shape)\n",
+    "print(a[3915])\n",
     "print(np.sum(a))\n",
     "print(costFunction(a,layer, flatX, sampleSize, y, yUnique, iLambda = 0.))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -461,34 +440,39 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.93098878501e-08\n",
-      "4.58300064565e-09\n",
-      "5.59907675779e-08\n",
-      "7.16937620382e-08\n",
-      "0.0\n",
-      "0.0\n",
-      "0.0\n",
-      "1.20195764453e-05\n",
-      "0.0\n",
-      "9.32232069317e-08\n"
+      "3915 \t -5.16694076413e-05 \t 0.14300247142\n",
+      "2553 \t 0.000130317904801 \t -0.393868746806\n",
+      "7889 \t -8.70829020005e-06 \t -0.00242495412\n",
+      "2259 \t -6.83055711992e-05 \t 0.144925981932\n",
+      "3342 \t 5.38021305285e-05 \t -0.178667553118\n",
+      "5405 \t -9.52503684259e-05 \t 0.206407475658\n",
+      "5084 \t -4.85511891801e-05 \t 0.172304406568\n",
+      "859 \t 1.37250885657e-05 \t -0.0466439352383\n",
+      "3619 \t 8.66365312824e-08 \t -0.000303325624571\n",
+      "5647 \t 1.31436750372e-06 \t -0.0043613719981\n"
      ]
     }
    ],
    "source": [
-    "def gradientCheck(beta, layer, sampleSize, epsilon):\n",
-    "    for i in np.random.randint(beta.size, size=10):\n",
-    "        epsilonVector = np.zeros(beta.size)\n",
+    "def gradientCheck(flatBeta, layer, flatX, sampleSize, y, yUnique, epsilon):\n",
+    "    for i in np.random.randint(flatBeta.size, size=10):\n",
+    "        epsilonVector = np.zeros(flatBeta.size)\n",
     "        epsilonVector[i] = epsilon\n",
-    "        betaPlus = betaMinus = beta\n",
-    "        betaPlus = betaPlus + epsilonVector\n",
-    "        costPlus = costFunction(betaMinus,layer, X, sampleSize, y, yUnique, iLambda = 0.)\n",
-    "        betaMinus = betaMinus - epsilonVector\n",
+    "        \n",
+    "        gradient = backPropagation(flatBeta, layer, flatX, sampleSize, y, yUnique)\n",
+    "        \n",
+    "        betaPlus = betaMinus = flatBeta\n",
+    "#         betaPlus = beta + epsilonVector\n",
+    "        betaPlus += epsilonVector\n",
+    "        costPlus = costFunction(betaPlus,layer, X, sampleSize, y, yUnique, iLambda = 0.)\n",
+    "#         betaMinus = beta - epsilonVector\n",
+    "        betaMinus -= epsilonVector\n",
     "        costMinus = costFunction(betaMinus,layer, X, sampleSize, y, yUnique, iLambda = 0.)\n",
     "        approximateGradient = (costPlus-costMinus)/(2*epsilon)\n",
-    "        print (approximateGradient)\n",
+    "        print (i, '\\t', approximateGradient, '\\t', gradient[i])\n",
     "\n",
     "epsilon = 0.0001\n",
-    "gradientCheck(betaInitial, layer, sampleSize, epsilon)\n"
+    "gradientCheck(betaTest, layer, flatX, sampleSize, y, yUnique, epsilon)\n"
    ]
   },
   {
@@ -496,23 +480,6 @@
    "metadata": {},
    "source": [
     "http://www.holehouse.org/mlclass/09_Neural_Networks_Learning.html"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# randomBetaSet = generateBeta(layer)\n",
-    "# initialBeta = flattenBeta(betaSet)\n",
-    "# iLambda = 0\n",
-    "# a = optimize.fmin_cg(costFunction, x0=initialBeta,\n",
-    "#                        fprime=backPropagation, args=(layer, flatX, sampleSize, y, yUnique),\n",
-    "#                        maxiter=50,disp=True,full_output=True)\n",
-    "# len(a)"
    ]
   },
   {
@@ -557,11 +524,11 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "a = betaOptimisation_1(flatBeta, flatX, sampleSize, y, yUnique, iLambda=0.)"
+    "a = betaOptimisation_1(betaInitial, flatX, sampleSize, y, yUnique, iLambda=0.)"
    ]
   },
   {
@@ -572,7 +539,7 @@
    },
    "outputs": [],
    "source": [
-    "b = betaOptimisation_2(flatBeta, flatX, sampleSize, y, yUnique, iLambda=0.)"
+    "b = betaOptimisation_2(betaInitial, flatX, sampleSize, y, yUnique, iLambda=0.)"
    ]
   },
   {
