Update notebooks imports

--- a/notebooks/1_linear_regression.ipynb
+++ b/notebooks/1_linear_regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,10 +13,13 @@
     "\n",
     "import matplotlib\n",
     "import matplotlib.pyplot as plt\n",
-    "\n",
     "matplotlib.style.use('ggplot')\n",
+    "%matplotlib inline\n",
     "\n",
-    "import time"
+    "import time\n",
+    "\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2"
    ]
   },
   {
