--- a/notebooks/2_logistic_regression.ipynb
+++ b/notebooks/2_logistic_regression.ipynb
@@ -8,19 +8,23 @@
    "source": [
     "import numpy as np\n",
     "\n",
+    "from scipy import optimize\n",
+    "\n",
     "import pandas as pd\n",
     "\n",
     "import matplotlib\n",
     "import matplotlib.pyplot as plt\n",
     "matplotlib.style.use('ggplot')\n",
-    "\n",
-    "from scipy import optimize\n",
+    "%matplotlib inline\n",
     "\n",
     "from sklearn.preprocessing import PolynomialFeatures\n",
     "\n",
     "import csv\n",
     "\n",
-    "import time"
+    "import time\n",
+    "\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2"
    ]
   },
   {
