--- a/notebooks/4_neural_networks_II.ipynb
+++ b/notebooks/4_neural_networks_II.ipynb
@@ -14,11 +14,16 @@
     "\n",
     "import pandas as pd\n",
     "\n",
-    "%matplotlib inline\n",
+    "import matplotlib\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.image as mpimg\n",
     "from matplotlib.image import NonUniformImage\n",
-    "from matplotlib import cm"
+    "from matplotlib import cm\n",
+    "matplotlib.style.use('ggplot')\n",
+    "%matplotlib inline\n",
+    "\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2"
    ]
   },
   {
