--- a/notebooks/6_spam_classification.ipynb
+++ b/notebooks/6_spam_classification.ipynb
@@ -30,20 +30,18 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "spamTestFile = 'spamTest.mat'\n",
-    "spamTrainFile = 'spamTrain.mat'\n",
+    "spam_test_file_path = '../course_materials/spamTest.mat'\n",
+    "spam_train_file_path = '../course_materials/spamTrain.mat'\n",
     "\n",
-    "eMail_1 = 'emailSample1.txt'\n",
-    "eMail_2 = 'emailSample2.txt'\n",
-    "spam_1 = 'spamSample1.txt'\n",
-    "spam_2 = 'spamSample2.txt'\n",
+    "eMail_1 = '../course_materials/emailSample1.txt'\n",
+    "eMail_2 = '../course_materials/emailSample2.txt'\n",
+    "spam_1 = '../course_materials/spamSample1.txt'\n",
+    "spam_2 = '../course_materials/spamSample2.txt'\n",
     "\n",
-    "vocabFile = 'vocab.txt'"
+    "vocabFile = '../course_materials/vocab.txt'"
    ]
   },
   {
@@ -52,8 +50,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "spamTestData = loadmat(spamTestFile)\n",
-    "spamTrainData = loadmat(spamTrainFile)"
+    "spamTestData = loadmat(spam_test_file_path)\n",
+    "spamTrainData = loadmat(spam_train_file_path)"
    ]
   },
   {
@@ -115,9 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def wordStemming(word):\n",
@@ -171,6 +167,13 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/nikita/Documents/andrew-ng-2-python/.venv_andrew_ng_2_python/lib/python3.7/site-packages/ipykernel_launcher.py:42: FutureWarning: Using a non-tuple sequence for multidimensional indexing is deprecated; use `arr[tuple(seq)]` instead of `arr[seq]`. In the future this will be interpreted as an array index, `arr[np.array(seq)]`, which will result either in an error or a different result.\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
        "37.0"
@@ -204,8 +207,8 @@
     "X_test = spamTestData['Xtest']\n",
     "y_test = spamTestData['ytest']\n",
     "\n",
-    "sigma = 1\n",
-    "gaussianSVM = svm.SVC(C=1, kernel='rbf', gamma=sigma**(-2))\n",
+    "σ = 1\n",
+    "gaussianSVM = svm.SVC(C=1, kernel='rbf', gamma=σ**(-2))\n",
     "gaussianSVM.fit(X_train, y_train.flatten())\n",
     "\n",
     "a = gaussianSVM.decision_function(X_train).reshape(y_train.shape)\n",
@@ -230,9 +233,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy 1.0 \n",
-      "Precision = 1.0 \n",
-      "Recall = 1.0\n"
+      "\taccuracy 1.000\n",
+      "\trecision 1.000\n",
+      "\tRecall 1.000\n"
      ]
     }
    ],
@@ -243,15 +246,13 @@
     "accuracy = (y_train.shape[0] - fP - fN)/y_train.shape[0]\n",
     "precision  = tP/(tP+fP)\n",
     "recall  = tP/(tP+fN)\n",
-    "print(\"Accuracy\", accuracy, \"\\nPrecision =\", precision, \"\\nRecall =\", recall)"
+    "print(f\"\\taccuracy {accuracy:.3f}\\n\\trecision {precision:.3f}\\n\\tRecall {recall:.3f}\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "c = gaussianSVM.decision_function(X_test).reshape(y_test.shape)"
@@ -264,7 +265,7 @@
    "outputs": [],
    "source": [
     "c.shape\n",
-    "d = c>=0"
+    "d = c >= 0"
    ]
   },
   {
@@ -276,9 +277,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy 0.798 \n",
-      "Precision = 1.0 \n",
-      "Recall = 0.344155844156\n"
+      "\taccuracy 0.798\n",
+      "\trecision 1.000\n",
+      "\tRecall 0.344\n"
      ]
     }
    ],
@@ -289,15 +290,13 @@
     "accuracy = (y_test.shape[0] - fP - fN)/y_test.shape[0]\n",
     "precision  = tP/(tP+fP)\n",
     "recall  = tP/(tP+fN)\n",
-    "print(\"Accuracy\", accuracy, \"\\nPrecision =\", precision, \"\\nRecall =\", recall)"
+    "print(f\"\\taccuracy {accuracy:.3f}\\n\\trecision {precision:.3f}\\n\\tRecall {recall:.3f}\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
