--- a/notebooks/4_neural_networks_II.ipynb
+++ b/notebooks/4_neural_networks_II.ipynb
@@ -129,7 +129,7 @@
     "#     H_2 (5000, 10)\n",
     "    return H_byLayer\n",
     "\n",
-    "def get_sigmoid_get_gradient(Z):\n",
+    "def get_sigmoid_gradient(Z):\n",
     "    return get_sigmoid(Z)*(1-get_sigmoid(Z))\n",
     "\n",
     "def cost_function(β_flat, layer, X_flat, n_samples, y, yUnique, λ = 0.):\n",
@@ -329,7 +329,7 @@
     "#     error matrix E(5000, 10)\n",
     "    E = H[len(layer)-2] - Y\n",
     "    for l in reversed(range(len(layer)-1)):\n",
-    "        E = np.dot(E*get_sigmoid_get_gradient(H[l]), β_set[l])[:,1:]\n",
+    "        E = np.dot(E*get_sigmoid_gradient(H[l]), β_set[l])[:,1:]\n",
     "        deltaSet = (np.dot(H[l].T, np.insert(E, 0, 1, axis=1)),) + deltaSet\n",
     "    flatDelta = flatten_β(deltaSet)\n",
     "    return β_flat + flatDelta/n_samples"
@@ -376,7 +376,7 @@
     "E = H[len(layer)-2] - Y\n",
     "# print(E.shape)\n",
     "for l in reversed(range(len(layer)-1)):\n",
-    "    E = np.dot(E*get_sigmoid_get_gradient(H[l]), β_set[l])[:,1:]\n",
+    "    E = np.dot(E*get_sigmoid_gradient(H[l]), β_set[l])[:,1:]\n",
     "    print(E.shape)\n",
     "    deltaSet = (np.dot(H[l].T, np.insert(E, 0, 1, axis=1)),) + deltaSet\n",
     "print(len(deltaSet))\n",
